(maint) Bump PuppetDB Extensions and PuppetDB dependency to 3.0.1-SNAPSHOT